  * installer.c: set permissions for directory only if it is a new directory
  * install indimail.plist in shareddir/boot
  * svctool: updated macOSuseradd, macOSgroupadd
  * svctool, svwait: fix date command syntax for Darwin, FreeBSD
  * svctool: --fixedharedlibs for Darwin
  * svctool: use /bin/echo -n instead of builtin echo -n (which doesn't work on Darwin)
  * svctool: create /var/run/mysqld for Darwin when creating mysqldb
  * svctool: use openssl passwd -6 (sha512) missing on darwin use openssl passwd -1 (md5)
  * svctool: use LC_ALL=C for tr command on Darwin
  * svctool: check for mysqld in mysqlprefix/bin for Darwin
  * svctool: updated macOSuseradd, macOSgroupadd functiona for Darwin
  * svctool: fixed date command for getting time in seconds for Darwin/FreeBSD
  * indimail.plist: service directory on Darwin changed to /usr/local/etc/indimail/service
  * svctool: renamed launchd unit file indimail.plist to svscan.plist
  * svctool: create /service link in /etc/synthetic.conf for Darwin
  * svctool: create /var/indimail/inquery directory
  * svctool: removed hardcoded directory for svwait in inlookup, pwdlookup service
  * hier.c, indimail-mta.spec, Makefile: renamed launchd unit file indimail.plist to svscan.plist
  * svwait: replace builtin echo with /bin/echo -n (for Darwin)
  * svctool: fixed users getting added multiple times to com.apple.loginwindow HiddenUsersList
  * installer new features, 1. uninstall option (-u, -i), 2. create devices, 3. create fifo
  * Makefile: Added uninstall target
  * Added comments in installer input files
  * svctool: remove indimail, indimail-mta users from HiddenUsersList for Darwin
  * Makefile: run instcheck to set permissions on make install.
  * indimail-mta: Makefile: replaced g++ with c++ for portability
  * indimail-mta, ucspi-tcp: fixed uninstall target
  * installer.c: fixed setting of symbolic links
  * qmail-local.c: fixed bug with loopcounter in qmail-local.c - initialized maxdeliveredto