@@ -1,0 +1,11 @@
+/*
+ * $Log: run_init.h,v $
+ * Revision 1.1  2020-10-08 18:25:10+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
+#ifndef RUN_INIT_H
+#define RUN_INIT_H
+
+void            run_init(char *, char *);
+#endif
